chuc nang login + quan li nhan vien

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,11 +36,13 @@ dist.jlink.output=${dist.jlink.dir}/MiniMartSystem
 endorsed.classpath=
 excludes=
 file.reference.rs2xml.jar=C:\\Users\\PC\\Downloads\\rs2xml.jar
+file.reference.rs2xml.jar-1=D:\\rs2xml\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.rs2xml.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
