--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,14 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MiniMartSystem
 endorsed.classpath=
 excludes=
-file.reference.rs2xml.jar=C:\\Users\\PC\\Downloads\\rs2xml.jar
-file.reference.rs2xml.jar-1=D:\\rs2xml\\rs2xml.jar
+file.reference.rs2xml.jar=C:\\Users\\LENOVO\\Downloads\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${file.reference.rs2xml.jar}:\
-    ${file.reference.rs2xml.jar-1}
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
