--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,12 +37,15 @@ endorsed.classpath=
 excludes=
 file.reference.rs2xml.jar=C:\\Users\\PC\\Downloads\\rs2xml.jar
 file.reference.rs2xml.jar-1=D:\\rs2xml\\rs2xml.jar
+file.reference.rs2xml.jar-2=C:\\Users\\PC\\Downloads\\rs2xml\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
     ${file.reference.rs2xml.jar}:\
-    ${file.reference.rs2xml.jar-1}
+    ${file.reference.rs2xml.jar-1}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.rs2xml.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
