--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,7 +47,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-<<<<<<< HEAD
+    <<<<<<< HEAD:\
+    ${file.reference.rs2xml.jar-2}
     ${file.reference.rs2xml.jar}:\
     ${file.reference.rs2xml.jar-1}
 # Space-separated list of extra javac options
